[tool.poetry]
name = "delarva"
version = "0.1.0"
description = "A slash-based debug cog for nextcord."
authors = ["Oliver Wilkes <oliverwilkes2006@icloud.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ooliver1/delarva"
homepage = "https://github.com/ooliver1/delarva"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

packages = [
    { include = "delarva" },
]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0"
psutil = { version = "^5.0.0", optional = true }

[tool.poetry.extras]
process = ["psutil"]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^5.0.4"
taskipy = "^1.10.3"
pyright = "1.1.293"
python-dotenv = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
pre-commit = "pre-commit install --install-hooks"
lint = "pre-commit run --all-files"
black = "task lint black"
isort = "task lint isort"
flake8 = "task lint flake8"
pyright = "dotenv -f task.env run -- pyright"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
py_version = 38
line_length = 88
combine_as_imports = true
filter_files = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.8"
